--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,33 +9,31 @@ services:
       - ./server/000-default.conf:/etc/apache2/sites-available/000-default.conf
       - ./server/apache2.conf:/etc/apache2/apache2.conf
       - ./server/php.ini:/usr/local/etc/php/php.ini
-    depends_on:
-      - database
 
-  database:
+  mariadb:
     image: mariadb
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: mydatabase
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: esgipwd
+      MYSQL_DATABASE: esgi
+      MYSQL_USER: esgi
+      MYSQL_PASSWORD: esgipwd
     ports:
       - "3306:3306"
     volumes:
-      - db_data:/var/lib/mysql
+      - mariadb_data:/var/lib/mysql
 
-  # Service phpMyAdmin
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin
+    restart: always
     environment:
-      PMA_HOST: database
-      PMA_USER: root
-      PMA_PASSWORD: root
+      PMA_HOST: mariadb
+      PMA_USER: esgi
+      PMA_PASSWORD: esgipwd
     ports:
-      - "8181:80"
+      - "8080:80"
     depends_on:
-      - database
+      - mariadb
 
 volumes:
-  db_data:
+  mariadb_data:
