--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,11 +1,4 @@
-RewriteEngine On
-
-# RewwriteCond : Condition de réeciture
-
-# !-d : Non existant en tant que répertoire
+RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
-
-# !-f : Non existant en tant que fichier
 RewriteCond %{REQUEST_FILENAME} !-f
-
-RewriteRule ^(.+)$ index.php [QSA,L]
+RewriteRule . index.php [L,QSA]
