--- a/www/routes.yaml
+++ b/www/routes.yaml
@@ -1,15 +1,20 @@
 /:
   controller: Main
-  action : Home
+  action: home
+
+/a-propos:
+  controller: Main
+  action: aboutUs
 
 /login:
   controller: Security
-  action : Login
+  action: login
 
 /logout:
   controller: Security
-  action : Logout
+  action: logout
 
 /register:
   controller: Security
-  action : Register
+  action: register
+
