--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -2,13 +2,23 @@ FROM php:8.2-apache
 
 RUN apt-get update
 
-# Install MySQL PDO for MariaDB compatibility
-RUN docker-php-ext-install pdo_mysql
+# Install Postgre PDO
+RUN apt-get install -y libpq-dev \
+    && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
+    && docker-php-ext-install pdo pdo_pgsql pgsql
 
-# Other Extensions and Configurations
+# Install MySQL PDO
+RUN apt-get install -y libpq-dev \
+    && docker-php-ext-install pdo pdo_mysql
+
+
 RUN apt-get update -y && apt-get install -y libpng-dev libfreetype6-dev libyaml-dev
-RUN docker-php-ext-configure gd --with-freetype
-RUN docker-php-ext-install gd
-RUN pecl install yaml
+
+RUN  docker-php-ext-configure gd --with-freetype
+RUN  docker-php-ext-install gd
+
+RUN pecl install yamL
+
 RUN usermod -u 1000 www-data
+
 RUN a2enmod rewrite
